--- a/Restaurante/CpRestaurante/FrmPrincipal.resx
+++ b/Restaurante/CpRestaurante/FrmPrincipal.resx
@@ -151,7 +151,7 @@
   <data name="ribbonButton1.SmallImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
+        vAAADrwBlbxySQAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
         RUkUEZ0YRMS+DDI70MkTmzJnDc8iU8QT2mAEItnle90wHwTDyBduXnie5/rd133Q4ZKfAJqHFs9E08A8
         zD1emDpmYXjqRlnTFIrMk8iuGkNaxWekGEaQrHecBfw+/vPXODw6hj9whN2fh/Bt/8LSRgA3cxr/DeBZ
         9kvmTNMoHGNbIrYN+3Aj23IxgJkpds0doP3VstgmsNexhutZ9QrAms8T0zYzU5xXM46kcjsmvfvoeL2i
@@ -166,7 +166,7 @@
   <data name="ribbonButton2.SmallImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
+        vAAADrwBlbxySQAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
         RUkUEZ0YRMS+DDI70MkTmzJnDc8iU8QT2mAEItnle90wHwTDyBduXnie5/rd133Q4ZKfAJqHFs9E08A8
         zD1emDpmYXjqRlnTFIrMk8iuGkNaxWekGEaQrHecBfw+/vPXODw6hj9whN2fh/Bt/8LSRgA3cxr/DeBZ
         9kvmTNMoHGNbIrYN+3Aj23IxgJkpds0doP3VstgmsNexhutZ9QrAms8T0zYzU5xXM46kcjsmvfvoeL2i
@@ -181,7 +181,7 @@
   <data name="Clien.SmallImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
+        vAAADrwBlbxySQAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
         RUkUEZ0YRMS+DDI70MkTmzJnDc8iU8QT2mAEItnle90wHwTDyBduXnie5/rd133Q4ZKfAJqHFs9E08A8
         zD1emDpmYXjqRlnTFIrMk8iuGkNaxWekGEaQrHecBfw+/vPXODw6hj9whN2fh/Bt/8LSRgA3cxr/DeBZ
         9kvmTNMoHGNbIrYN+3Aj23IxgJkpds0doP3VstgmsNexhutZ9QrAms8T0zYzU5xXM46kcjsmvfvoeL2i
@@ -193,19 +193,80 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <data name="ribbonButton3.SmallImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAgNJREFUOE+lkutLk2EYxvePhJaHShFBUTEPiCieQOmDiEZgrEbpYGiCQxkqA80I
-        RUkUEZ0YRMS+DDI70MkTmzJnDc8iU8QT2mAEItnle90wHwTDyBduXnie5/rd133Q4ZKfAJqHFs9E08A8
-        zD1emDpmYXjqRlnTFIrMk8iuGkNaxWekGEaQrHecBfw+/vPXODw6hj9whN2fh/Bt/8LSRgA3cxr/DeBZ
-        9kvmTNMoHGNbIrYN+3Aj23IxgJkpds0doP3VstgmsNexhutZ9QrAms8T0zYzU5xXM46kcjsmvfvoeL2i
-        AeoUgA07T8yaaZuZKab1rzN74jgys1YB2O2gmBZzH49LODXrrJlnzEzxe9cOLH1ziMioVgCOiuIFX0CE
-        Q+/WYf+yieiCFrRp9tkwxnP7Kt5MbKGm6wfC000KwDlTXNLgEvHMkh+Db32o7fYivtQm1l9+3IBOp5P7
-        yjYPwlKNCsAluWudxgvtknb5t9oWcL/VLU2Mvd2JFq3uqs7vAtE/ceNayiMF4KiYMSjmY2O7B4Ua+NaD
-        YQGEJumRbvyG1IcfBHI12aAAXM8R57aIWTNrLLY4tfNPiCvpR1SeVeu6WWzHFD6THSDwFMDdpmUG62NJ
-        PKM4Or9ZxBxb8H8l7g5CEu8pAOfM3WanSeeS8CFHxW4zM2umbWamOCShXAH+/wNOANABIDUxWnDPAAAA
-        AElFTkSuQmCC
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AABVS0NmVEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RL
+        RLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RLRLtUS0S7VEtEu1RL
+        RLtUS0S7U0tEZVRKQmdUS0S7VEtEu2hZSdSCa1D/gmtQ/4JrUP+Ca1D/gmtQ/4JrUP+Ca1D/gmtQ/4Jr
+        UP+Ca1D/gmtQ/4JrUP+Ca1D/gmtQ/4JrUP+Ca1D/gmtQ/4JrUP+Ca1D/gmtQ/4JrUP+Ca1D/gmtQ/4Jr
+        UP9oWUnUVEtEu1RLRLtVS0NmAAAAAAAAAAAAAAAA/8JyQ//Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Db0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/wXAZ/8Fx/v/Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wXH+/7xuFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/wnDO/8Jx///C
+        cf//wnH//8N0///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///BccsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/C
+        cH//wnH//8Jx///Sl////Pj//8qD///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8FwfQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/8ZxG//BcPn/wnH//8h////9+v//473//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccfj/xHUaAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/8JxoP/Ccf//wnH//9OZ///Nif//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8JwnAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/v3Ek/8Fw9v/Ccf//wnH//8Jx///Ccf//wnL//8Jx///C
+        cf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///BcfX/w3AiAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/wnB6/8Jx///Ccf//wnH//+XC///x
+        3///x33//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8NxdwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/MZgX/wXDM/8Jx///C
+        cf//0ZP///z3///26v//zIj//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///B
+        ccv/zGYFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/E
+        dRr/wnDi/8Jx///Ccf//zo3///rz///+/f//5sX//8R1///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wXDl/8FyHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP/AcjH/wnHv/8Jx///Ccf//x37//+fH///58v//yoT//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Fw7v/DcS8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/cST/wXDV/8Jx///Ccf//wnH//8Jx///Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Ccdr/v3IoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+7dw//wXGi/8Fx/v/Ccf//wnH//8Jx///C
+        cf//wnH//8Jx///Bcf7/wnGg/8htDgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/wm4u/8Fwkf/C
+        cdb/wXH1/8Fx9f/Ccdb/wXCR/79uLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAFVVVQMAAAAAAAAAAAAAAAAAAAAAVVVVAwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABYTUIXU0pE81RLQlgAAAAAAAAAAFhNQhdTSkTzVEtCWAAA
+        AAAAAAAAAAAAAAAAAAAAAAABV0lDJldJQyYAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFUS0PEVEtD5gAAAAEAAAAAAAAAAVRL
+        Q8RUS0PmAAAAAQAAAAAAAAAAVUdBJ1RKQ9BUS0T/VEtE/1NLQ89SS0QlAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFNKRFlUS0T/UktDIgAA
+        AAAAAAAAU0pEWVRLRP9SS0MiAAAAAH9/fwJUSkPQVEtD5lVKRWBVSkVgU0tE51NLQ88AAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVExEYVRL
+        RP9VS0IbAAAAAAAAAABUTERhVEtE/1VLQhsAAAAAV0lDJlRLRP9TS0NfAAAAAAAAAABVSkVgVEtE/1dJ
+        QyYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGYz
+        MwVUSkPXVEpD2gAAAAAAAAAAXEVFC1RKQ9dUSkPaAAAAAAAAAABVR0EnVEtE/1RLQ14AAAAAAAAAAFVK
+        RWBUS0T/V0lDJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAUFBDE1RKRNFTS0NAAAAAAAAAAABUSkOXU0pD/FJKQkEAAAAAAAAAAH9/fwJTS0TSVEtD5lRL
+        Q15TS0NfVEtD5lRKQ9AAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVRKRO9TS0SYAAAAAAAAAAAAAAAAAAAAAFJM
+        RihTS0TSVEtE/1RLRP9USkTRVUdBJwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABVRkYSVEtE/1NMRGgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAH9/fwJVR0EnVUdBJ39/fwIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABUS0PpVEtDqgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFNL
+        Q4BUS0T/U0pFXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAVVVVA1RLRI5TSkRWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADgAAAH4AAAB/AAAA/wAAAP8AAAD/gAAB/4AAAf/AAAP/wA
+        AD/+AAB//wAA//+AAf//wAP///AP/+9////GPD//whgf/+MQD//jEY//xjGP/8YwD//8eB///Hw///5/
+        ///+P////j////////////////////////8=
 </value>
   </data>
 </root>
